Added Scope of Work APIs
