# public/docs/openapi.yaml
@@ -68,7 +68,7 @@ paths:
                 transcriptId:
                   type: integer
                   description: 'Id of the transcript.'
-                  example: 20
+                  example: 10
               required:
                 - transcriptId
       security: []
@@ -91,7 +91,7 @@ paths:
                 problemGoalText:
                   type: string
                   description: 'text of the ProblemsAndGoals.'
-                  example: expedita
+                  example: iste
               required:
                 - problemGoalText
       security: []
@@ -100,7 +100,7 @@ paths:
         in: path
         name: id
         description: 'Id of the problems and goals.'
-        example: 13
+        example: 16
         required: true
         schema:
           type: integer
@@ -123,7 +123,7 @@ paths:
                 problemGoalID:
                   type: integer
                   description: 'Id of the ProblemsAndGoals.'
-                  example: 14
+                  example: 20
               required:
                 - problemGoalID
       security: []
@@ -146,7 +146,7 @@ paths:
                 overviewText:
                   type: string
                   description: 'text of the ProjectOverview.'
-                  example: excepturi
+                  example: illum
               required:
                 - overviewText
       security: []
@@ -155,7 +155,7 @@ paths:
         in: path
         name: id
         description: 'Id of the ProjectOverview.'
-        example: 3
+        example: 17
         required: true
         schema:
           type: integer
@@ -169,12 +169,12 @@ paths:
           in: query
           name: page
           description: 'page number.'
-          example: 8
+          example: 10
           required: false
           schema:
             type: integer
             description: 'page number.'
-            example: 8
+            example: 10
       responses:
         200:
           description: ''
@@ -183,7 +183,7 @@ paths:
               schema:
                 type: object
                 example:
-                  current_page: 8
+                  current_page: 10
                   data: []
                   first_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   from: null
@@ -191,7 +191,7 @@ paths:
                   last_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   links:
                     -
-                      url: 'http://localhost:8000/api/project-summery?page=7'
+                      url: 'http://localhost:8000/api/project-summery?page=9'
                       label: '&laquo; Previous'
                       active: false
                     -
@@ -205,13 +205,13 @@ paths:
                   next_page_url: null
                   path: 'http://localhost:8000/api/project-summery'
                   per_page: 10
-                  prev_page_url: 'http://localhost:8000/api/project-summery?page=7'
+                  prev_page_url: 'http://localhost:8000/api/project-summery?page=9'
                   to: null
                   total: 1
                 properties:
                   current_page:
                     type: integer
-                    example: 8
+                    example: 10
                   data:
                     type: array
                     example: []
@@ -231,7 +231,7 @@ paths:
                     type: array
                     example:
                       -
-                        url: 'http://localhost:8000/api/project-summery?page=7'
+                        url: 'http://localhost:8000/api/project-summery?page=9'
                         label: '&laquo; Previous'
                         active: false
                       -
@@ -247,7 +247,7 @@ paths:
                       properties:
                         url:
                           type: string
-                          example: 'http://localhost:8000/api/project-summery?page=7'
+                          example: 'http://localhost:8000/api/project-summery?page=9'
                         label:
                           type: string
                           example: '&laquo; Previous'
@@ -265,7 +265,7 @@ paths:
                     example: 10
                   prev_page_url:
                     type: string
-                    example: 'http://localhost:8000/api/project-summery?page=7'
+                    example: 'http://localhost:8000/api/project-summery?page=9'
                   to:
                     type: string
                     example: null
@@ -293,23 +293,23 @@ paths:
                 transcriptText:
                   type: string
                   description: 'The text of the transcript.'
-                  example: corporis
+                  example: modi
                 projectName:
                   type: string
                   description: 'The name of the project.'
-                  example: et
+                  example: itaque
                 clientPhone:
                   type: string
                   description: 'The phone number of the client.'
-                  example: recusandae
+                  example: facilis
                 clientEmail:
                   type: string
                   description: 'The email of the client.'
-                  example: toy71@example.org
+                  example: qwalter@example.net
                 clientWebsite:
                   type: string
                   description: 'The website of the client.'
-                  example: commodi
+                  example: qui
               required:
                 - transcriptText
                 - projectName
@@ -358,7 +358,7 @@ paths:
                 summaryText:
                   type: integer
                   description: 'summaryText of the Project Summery.'
-                  example: 14
+                  example: 1
               required:
                 - summaryText
       security: []
@@ -385,7 +385,62 @@ paths:
             value: ''
           present:
             summary: 'When the value is present'
-            value: 9
+            value: 8
+  /api/scope-of-work:
+    post:
+      summary: 'Create Scope Of Work'
+      operationId: createScopeOfWork
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Scope Of Work'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                problemGoalID:
+                  type: integer
+                  description: 'Id of the ProblemsAndGoals.'
+                  example: 20
+              required:
+                - problemGoalID
+      security: []
+  '/api/scope-of-work/{id}':
+    post:
+      summary: 'Update Scope Of Work'
+      operationId: updateScopeOfWork
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Scope Of Work'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                scopeText:
+                  type: string
+                  description: 'text of the Scope of Work.'
+                  example: a
+              required:
+                - scopeText
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'Id of the Scope of Work.'
+        example: 10
+        required: true
+        schema:
+          type: integer
 tags:
   -
     name: Endpoints
@@ -398,4 +453,7 @@ tags:
     description: ''
   -
     name: 'Project Summery'
+    description: ''
+  -
+    name: 'Scope Of Work'
     description: ''
